# tx

./: .gitignore  README.md  install.py  lint  pyproject.toml  setup.py
.github/workflows/: lint.yml  push_ubuntu.yml  push_win.yml
src/tx/: cli.py
tests/: test_cli.py  test_cli_help.py  test_cli_run.py  test_run.py
tests/tx/: testfile.txt
