[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "wormhole-tx"
readme = "README.md"
description = "Front end for wormhole, easier and more secure!"
requires-python = ">=3.10"
keywords = ["template-python-cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "magic-wormhole>=0.15.0",
    "colorama",
]
# Change this with the version number bump.
version = "1.1.0"

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[project.scripts]
tx = "tx.cli:main"
